[project]
name = "networkedx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "eclipse-zenoh>=1.0.0",
    # "eclipse-zenoh>=0.11.0",
    "humid>=0.3.1",
    "matplotlib>=3.9.2",
    "networkx>=3.4.1",
    "scipy>=1.14.1",
    # put your dependencies here
]

[project.scripts]
nx = "networkedx.main:main"

[project.optional-dependencies]
test = [
    "pytest>=8.3.3",
]

[tool.uv]
package = true

[tool.ruff]
select = ["ALL"]